k8s-specifications/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: vote
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    name: nginx-ingress
