k8s-specifications/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: vote
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: vote
