k8s-specifications/ingress-result-vote.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-result-vote
spec:
  rules:
    - host: voting
      http:
        paths:
        - path: /vote
          backend:
            serviceName: vote-service
            servicePort: 80
        - path: /result
          backend:
            serviceName: result-service
            servicePort: 80
