k8s-specifications/ingress-result.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-result
spec:
  backend:
    serviceName: result-service
    servicePort: 80
