k8s-specifications/ingress-vote.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-vote
spec:
  backend:
    serviceName: vote-service
    servicePort: 80
