k8s-specifications/kubernetes-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
        - path: /vote
          backend:
            serviceName: vote
            servicePort: 3000
        - path: /result
          backend:
            serviceName: result
            servicePort: 5000
